# openai-sdk-compat-tester

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  README_ZH.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: debug_stream_chunk_order.py  render_chat_input_audio_sample.py
src/openai_chat_compat_tester/: cli.py  live_config.py  scenarios.py  test_support.py
src/openai_sdk_compat_tester/: __init__.py  cli.py  scenarios.py  test_support.py
tests/: conftest.py  test_cli_nonlive.py  test_live_config_nonlive.py  test_scenario_catalog.py
tests/acceptance/: test_chat_frequency_presence_penalty_live.py  test_chat_logit_bias_live.py  test_chat_temperature_live.py  test_responses_metadata_compat_gap_error_live.py  test_responses_parallel_tool_calls_false_live.py  test_responses_prompt_cache_key_acceptance_live.py  test_responses_service_tier_compat_gap_error_live.py  test_responses_text_verbosity_live.py  test_responses_tool_choice_required_live.py  test_responses_top_p_compat_gap_error_live.py  test_responses_truncation_compat_gap_error_live.py  test_responses_user_compat_gap_error_live.py
tests/contract/: test_chat_logprobs_live.py  test_chat_prompt_cache_key_live.py  test_chat_reasoning_effort_live.py  test_chat_stop_sequences_live.py  test_chat_stream_include_usage_live.py  test_error_empty_messages_live.py  test_error_invalid_model_live.py  test_error_invalid_response_schema_live.py  test_error_invalid_role_live.py  test_error_invalid_tool_schema_live.py  test_error_timeout_runtime_shape_live.py  test_finish_reason_error_state_live.py  test_finish_reason_length_live.py  test_models_live.py  test_responses_default_instructions_live.py  test_responses_developer_hoist_live.py  test_responses_empty_input_error_live.py  test_responses_explicit_instructions_override_hoisted_roles_live.py  test_responses_invalid_input_item_type_error_live.py  test_responses_invalid_temperature_error_live.py  test_responses_invalid_token_limit_error_live.py  test_responses_invalid_tool_schema_error_live.py  test_responses_json_object_text_format_live.py  test_responses_json_object_without_json_prompt_error_live.py  test_responses_non_stream_and_stream_minimum_consistency_live.py  test_responses_previous_response_id_branch_fork_live.py  test_responses_previous_response_id_branch_idempotence_live.py  test_responses_previous_response_id_continuation_live.py  test_responses_previous_response_id_function_call_output_live.py  test_responses_previous_response_id_streamed_function_call_output_live.py  test_responses_reasoning_effort_live.py  test_responses_stream_terminal_function_call_output_live.py  test_responses_streaming_event_closure_live.py  test_responses_streaming_invalid_input_item_type_error_live.py  test_responses_streaming_partial_consumption_live.py  test_responses_system_and_developer_precedence_live.py  test_responses_system_hoist_live.py  test_responses_temperature_and_token_limits_are_accepted_live.py  test_responses_temperature_two_live.py  test_responses_temperature_zero_live.py  (+8 more)
tests/effect/: test_chat_basic_non_stream_live.py  test_chat_basic_stream_live.py  test_chat_input_audio_live.py  test_chat_n_completions_live.py  test_chat_parallel_tool_calls_live.py  test_chat_response_format_json_object_live.py  test_stop_effect_live.py  (+27 more)
(+3 files in other folders)
