[project]
name = "openai-sdk-compat-tester"
version = "0.1.0"
description = "Standalone conformance tester for OpenAI-compatible Chat Completions and Responses APIs."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "OpenAI SDK Compat Tester contributors"},
]
keywords = [
    "openai",
    "compatibility",
    "conformance",
    "chat-completions",
    "responses",
    "testing",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "httpx>=0.28.1",
    "openai>=1.107.0",
    "pillow>=10.0",
    "pytest>=8.0",
    "rich>=14.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
]

[project.scripts]
openai-sdk-compat = "openai_sdk_compat_tester.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py39"
line-length = 140

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["E402"]
